--- a/public/css/style.css
+++ b/public/css/style.css
@@ -261,6 +261,19 @@ body {
   margin: 0 auto;
   background: #fff; }
 
+.signup-form{
+    max-height: 100vh; 
+    overflow-y: scroll;
+}
+
+ .signup-img{
+    height: 100vh;
+    width: 100%;
+    background: url('/images/signup-img.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
 .signup-img, .signup-form {
   width: 50%; }
 
@@ -268,7 +281,7 @@ body {
   margin-bottom: -7px; }
 
 .register-form {
-  padding: 50px 100px 50px 7px; }
+  padding: 50px 100px 50px 70px; }
 
 .form-row {
   margin: 0 -15px; }
@@ -437,9 +450,24 @@ select {
     background-color: #cd5300; }
 
 @media screen and (max-width: 992px) {
+
+  body {
+    overflow: unset; 
+  }
+
+  img {
+    max-width: 100%;
+    height: inherit;
+}
+  
   .container {
     width: calc(100% - 40px);
     max-width: 100%; }
+
+  .register-form {
+    padding: 50px  40px; 
+  }
+
 
   .signup-content {
     flex-direction: column;
@@ -448,9 +476,25 @@ select {
     -o-flex-direction: column;
     -ms-flex-direction: column; }
 
+  .signup-form{
+    max-height: unset; 
+    overflow-y: unset;
+  }
+
+  .signup-img{
+    height: 300px;
+    width: 100%;
+    background-position-y: 30%;
+  }
   .signup-img, .signup-form {
     width: 100%; } }
 @media screen and (max-width: 768px) {
+  .signup-img{
+    height: 300px;
+    width: 100%;
+    background-position-y: unset;
+  }
+
   .register-form {
     padding: 50px 40px 50px 40px; } }
 @media screen and (max-width: 575px) {
